# icon-sys

./: COPILOT-NOTES.MD  Cargo.toml  README.MD  deny.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-plz.yml
src/: api.rs  error.rs  lib.rs
src/folder_settings/: error.rs  mod.rs
src/folder_settings/sys/: linux.rs  macos.rs  windows.rs
src/folder_settings/sys/linux/: default_folder_icon_provider.rs  error.rs  folder_settings_provider.rs
src/folder_settings/sys/macos/: default_folder_icon_provider.rs  error.rs  folder_settings_provider.rs
src/folder_settings/sys/windows/: default_folder_icon_provider.rs  error.rs  folder_settings_provider.rs
src/icon/: error.rs  mod.rs
src/icon/sys/: linux.rs  macos.rs  windows.rs
tests/: linux.rs  windows.rs
