[package]
name = "icon-sys"
version = "0.1.2"
edition = "2024"
authors = ["Ethan Coates <ethancoates1567@gmail.com>"]
description = "A cross-platform Rust library for managing system shell icons"
license = "MIT OR Apache-2.0"
homepage= "https://github.com/ecoates2/icon-sys"
repository = "https://github.com/ecoates2/icon-sys"
readme = "README.MD"
keywords = ["icons", "folder-icons", "cross-platform", "shell"]
categories = ["filesystem"]

[dependencies]
thiserror = "2.0"
image = "0.25"
uuid = {version = "1.19", features = ["v4"]}

[target.'cfg(target_os = "linux")'.dependencies]
rust-ini = "0.21"
usvg = "0.45"
filetime = "0.2"
base64 = "0.22"

[target.'cfg(windows)'.dependencies]
windows = {version = "0.62.0", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi"
]}

[dev-dependencies]
tempfile = "3"
rust-ini = "0.21"

[features]
folder-settings = []
default = ["folder-settings"]
